--- a/index.html
+++ b/index.html
@@ -6,10 +6,96 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Product</title>
+    <title>LAREV</title>
 </head>
 
 <body>
+    <nav>
+        <h1>LAREV.</h1>
+        <div class="nav-right">
+            <div class="nav-elem">
+                <h4>case studies</h4>
+                <h5> <span>Case Studies</span></h5>
+            </div>
+            <div class="nav-elem">
+                <h4>areas of experties</h4>
+                <h5><span>AI & ML</span></h5>
+                <h5><span>FinTech</span></h5>
+                <h5><span>RealEstate</span></h5>
+                <h5><span>E-commerce</span></h5>
+                <h5><span>Web3</span></h5>
+
+            </div>
+            <div class="nav-elem">
+                <h4>ui ux design</h4>
+                <h5><span>UX Audit</span></h5>
+                <h5><span>UI Design</span></h5>
+                <h5><span>UX Design</span></h5>
+                <h5><span>UX Research</span></h5>
+            </div>
+            <div class="nav-elem">
+                <h4>product design</h4>
+                <h5><span>SaaS</span></h5>
+                <h5><span>Web App</span></h5>
+                <h5><span>Mobile App</span></h5>
+                <h5><span>Website Design</span></h5>
+            </div>
+            <div class="nav-elem">
+                <h4>design process</h4>
+                <h5><span>MVP</span></h5>
+                <h5><span>Relaunch</span></h5>
+            </div>
+            <div class="nav-elem">
+                <h4>auto agency</h4>
+                <h5><span>Our Story</span></h5>
+                <h5><span>Client's Feedback</span></h5>
+                <h5><span>Careers</span></h5>
+                <h5><span>News & Articles</span></h5>
+            </div>
+        </div>
+        <button>let's talk <svg fill="none" viewBox="0 0 20 20">
+                <path fill="#fff"
+                    d="M2.5 14.375V17.5h3.125l9.217-9.217-3.125-3.125L2.5 14.375Zm14.758-8.508a.83.83 0 0 0 0-1.175l-1.95-1.95a.83.83 0 0 0-1.175 0l-1.525 1.525 3.125 3.125 1.525-1.525Z">
+                </path>
+            </svg></button>
+        <div class="nav-bottom">
+
+        </div>
+        <!-- <div class="nav-bottom">
+            <div class="bottom-nav-cont first">
+                <h5><span>Case Studies</span></h5>
+            </div>
+            <div class="bottom-nav-cont second">
+                <h5><span>AI & ML</span></h5>
+                <h5><span>FinTech</span></h5>
+                <h5><span>RealEstate</span></h5>
+                <h5><span>E-commerce</span></h5>
+                <h5><span>Web3</span></h5>
+            </div>
+            <div class="bottom-nav-cont third">
+                <h5><span>UX Audit</span></h5>
+                <h5><span>UI Design</span></h5>
+                <h5><span>UX Design</span></h5>
+                <h5><span>UX Research</span></h5>
+            </div>
+            <div class="bottom-nav-cont fourth">
+                <h5><span>SaaS</span></h5>
+                <h5><span>Web App</span></h5>
+                <h5><span>Mobile App</span></h5>
+                <h5><span>Website Design</span></h5>
+            </div>
+            <div class="bottom-nav-cont fifth">
+                <h5><span>MVP</span></h5>
+                <h5><span>Relaunch</span></h5>
+            </div>
+            <div class="bottom-nav-cont sixth">
+                <h5><span>Our Story</span></h5>
+                <h5><span>Client's Feedback</span></h5>
+                <h5><span>Careers</span></h5>
+                <h5><span>News & Articles</span></h5>
+            </div>
+        </div> -->
+    </nav>
 
     <div id="main">
         <div class="page1">
@@ -36,7 +122,9 @@
 
         <div class="page2"></div>
     </div>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+        integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
 </body>
 
