--- a/index.html
+++ b/index.html
@@ -59,42 +59,8 @@
                 </path>
             </svg></button>
         <div class="nav-bottom">
-
         </div>
-        <!-- <div class="nav-bottom">
-            <div class="bottom-nav-cont first">
-                <h5><span>Case Studies</span></h5>
-            </div>
-            <div class="bottom-nav-cont second">
-                <h5><span>AI & ML</span></h5>
-                <h5><span>FinTech</span></h5>
-                <h5><span>RealEstate</span></h5>
-                <h5><span>E-commerce</span></h5>
-                <h5><span>Web3</span></h5>
-            </div>
-            <div class="bottom-nav-cont third">
-                <h5><span>UX Audit</span></h5>
-                <h5><span>UI Design</span></h5>
-                <h5><span>UX Design</span></h5>
-                <h5><span>UX Research</span></h5>
-            </div>
-            <div class="bottom-nav-cont fourth">
-                <h5><span>SaaS</span></h5>
-                <h5><span>Web App</span></h5>
-                <h5><span>Mobile App</span></h5>
-                <h5><span>Website Design</span></h5>
-            </div>
-            <div class="bottom-nav-cont fifth">
-                <h5><span>MVP</span></h5>
-                <h5><span>Relaunch</span></h5>
-            </div>
-            <div class="bottom-nav-cont sixth">
-                <h5><span>Our Story</span></h5>
-                <h5><span>Client's Feedback</span></h5>
-                <h5><span>Careers</span></h5>
-                <h5><span>News & Articles</span></h5>
-            </div>
-        </div> -->
+
     </nav>
 
     <div id="main">
@@ -117,6 +83,30 @@
                 <h4>user experience</h4>
                 <h4>and</h4>
                 <h4>digital product desing.</h4>
+            </div>
+            <div class="carousel">
+                <div class="blur-left"></div>
+                <div class="move">
+                    <img src="resources/coursel svgs/adweek.svg" alt="">
+                    <img src="resources/coursel svgs/awww.svg" alt="">
+                    <img src="resources/coursel svgs/forbes.svg" alt="">
+                    <img src="resources/coursel svgs/fwa.svg" alt="">
+                    <img src="resources/coursel svgs/pmi.svg" alt="">
+                    <img src="resources/coursel svgs/rd.svg" alt="">
+                    <img src="resources/coursel svgs/webby.svg" alt="">
+                    <img src="resources/coursel svgs/wf.svg" alt="">
+                </div>
+                <div class="move">
+                    <img src="resources/coursel svgs/adweek.svg" alt="">
+                    <img src="resources/coursel svgs/awww.svg" alt="">
+                    <img src="resources/coursel svgs/forbes.svg" alt="">
+                    <img src="resources/coursel svgs/fwa.svg" alt="">
+                    <img src="resources/coursel svgs/pmi.svg" alt="">
+                    <img src="resources/coursel svgs/rd.svg" alt="">
+                    <img src="resources/coursel svgs/webby.svg" alt="">
+                    <img src="resources/coursel svgs/wf.svg" alt="">
+                </div>
+                <div class="blur-right"></div>
             </div>
         </div>
 
