--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>LAREV</title>
+    <title>LAREV. — Digital Product Design Agency | Award Winning UX & UI Agency</title>
+    <link href="https://assets-global.website-files.com/64a2ab71942e1d57feb6fe39/6528221f95333ff155d01ad2_fav.gif"
+        rel="shortcut icon" type="image/x-icon">
 </head>
 
 <body>
@@ -110,8 +112,34 @@
             </div>
         </div>
 
-        <div class="page2"></div>
+        <div class="page2">
+            <div class="page2-left">
+                <p>Exclusive insights into UI/UX and product design</p>
+                <h5>Being a design studio at the forefront of digital transformation and product design, we take it upon
+                    ourselves to drop some knowledge, share insights, let out insider tips, and put our work on full
+                    display.</h5>
+            </div>
+            <div class="page2-right">
+                <div class="right-elem">
+                    <h5>Effective Design Principles For <br> Cryptocurrency Trading Interfaces</h5>
+                    <img src="resources/page 2 imgs/1.webp" alt="design">
+                </div>
+                <div class="right-elem">
+                    <h5>How to Design An AI Interface Users Will<br> Trust In 2024?</h5>
+                    <img src="resources/page 2 imgs/1.webp" alt="design">
+                </div>
+                <div class="right-elem">
+                    <h5>How AI Influences Design And <br> The Reciprocal Impact Of UX On AI-Driven<br>Products</h5>
+                    <img src="resources/page 2 imgs/1.webp" alt="design">
+                </div>
+                <div class="right-elem">
+                    <h5>Larev Becomes A Professional Webflow<br> Partner</h5>
+                    <img src="resources/page 2 imgs/1.webp" alt="design">
+                </div>
+            </div>
+        </div>
     </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
         integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
