Page 2 Animation complete

--- a/index.html
+++ b/index.html
@@ -126,18 +126,20 @@
                 </div>
                 <div class="right-elem">
                     <h5>How to Design An AI Interface Users Will<br> Trust In 2024?</h5>
-                    <img src="resources/page 2 imgs/1.webp" alt="design">
+                    <img src="resources/page 2 imgs/2.webp" alt="design">
                 </div>
                 <div class="right-elem">
                     <h5>How AI Influences Design And <br> The Reciprocal Impact Of UX On AI-Driven<br>Products</h5>
-                    <img src="resources/page 2 imgs/1.webp" alt="design">
+                    <img src="resources/page 2 imgs/3.webp" alt="design">
                 </div>
                 <div class="right-elem">
                     <h5>Larev Becomes A Professional Webflow<br> Partner</h5>
-                    <img src="resources/page 2 imgs/1.webp" alt="design">
+                    <img src="resources/page 2 imgs/4.webp" alt="design">
                 </div>
             </div>
         </div>
+
+        <div class="page3"></div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
