--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>LAREV. — Digital Product Design Agency | Award Winning UX & UI Agency</title>
     <link href="https://assets-global.website-files.com/64a2ab71942e1d57feb6fe39/6528221f95333ff155d01ad2_fav.gif"
         rel="shortcut icon" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -139,7 +140,15 @@
             </div>
         </div>
 
-        <div class="page3"></div>
+        <div class="page3">
+            <video src="resources/Page 3/cover video.mp4"></video>
+            <div class="pg3-cent">
+                <div class="icon">
+                    <i class="ri-play-fill"></i>
+                </div>
+                <h5>watch showreel</h5>
+            </div>
+        </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
