--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <div class="icon">
                     <i class="ri-play-fill"></i>
                 </div>
-                <h5>watch showreel</h5>
+                <h5>watch reel</h5>
             </div>
         </div>
     </div>
