--- a/index.html
+++ b/index.html
@@ -149,7 +149,65 @@
                 <h5>watch reel</h5>
             </div>
         </div>
+
+        <div class="page4">
+            <div class="page4-left">
+                Success stories <br> shaped by our <br> user experience <br> design agency
+            </div>
+            <div class="page4-right">
+                <div class="page4-right-cont">
+                    <h6>partnership mentality</h6>
+                    <p>Along with taking the lead in designing AI-powered solutions, we embody a partnership mentality.
+                        This exact commitment has been the bedrock of our clients’ successes. When you choose to
+                        collaborate with us, we promise to be right where your audience's changing desires meet your
+                        ambitious business goals. We don't settle for mediocrity; we strive for excellence in every
+                        Figma pixel, every touchpoint, and every UX interaction.</p>
+                </div>
+                <div class="page4-right-cont">
+                    <h6>results</h6>
+                    <p>That is how we've built 50+ sustainable startup products and helped 400+ brands secure millions
+                        in funding, achieve successful acquisitions, and establish themselves as globally recognized
+                        companies.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="page5">
+            <div class="page5-elem">
+                <h2>$500M</h2>
+                <h5>in funding secured owning to our designs</h5>
+                <h6>/001</h6>
+            </div>
+            <div class="page5-elem">
+                <h2>+1 million</h2>
+                <h5>increse in customer base</h5>
+                <h6>/002</h6>
+            </div>
+            <div class="page5-elem">
+                <h2>1 000 000+</h2>
+                <h5>of active market place</h5>
+                <h6>/003</h6>
+            </div>
+            <div class="page5-elem">
+                <h2>25 million</h2>
+                <h5>Monthly E-commerce visit</h5>
+                <h6>/004</h6>
+            </div>
+            <div class="page5-elem">
+                <h2>+300%</h2>
+                <h5>increase in sign-up conversion rate</h5>
+                <h6>/005</h6>
+            </div>
+            <div class="page5-elem">
+                <h2>+42%</h2>
+                <h5>increse in the app's retention rate</h5>
+                <h6>/006</h6>
+            </div>
+
+
+        </div>
     </div>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
         integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
